# 26esg

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/esg/: crew.py  main.py
src/esg/config/: agents.yaml  tasks.yaml
